Changed style naming to prevent overlap

--- a/client/header.css
+++ b/client/header.css
@@ -67,7 +67,7 @@
   margin-right: 15px;
 }
 
-.fa-search {
+.search-glass {
   position: absolute;
   padding-left: 10px;
 }
